+--------+------------+
| v0.0.4 | 2022-??-?? |
+--------+------------+





+--------+------------+
| v0.0.3 | 2022-08-15 |
+--------+------------+


OPRAVENÉ CHYBY:

1) kompilace pomocí DJGPP pod FreeDOS
   (zkráceny názvy souborů na max. 8 znaků)

2) vykreslování ukazatele kol
   (opravena chyba s chybějícím pravým orámováním)


NOVINKY:

1) přepínače pro spuštění programu
   [?] - zobrazí seznam dostupných přepínačů
   [m] - zobrazí hlavní nápovědu
   [s] - vypíše herní statistiky
   [v] - vypíše informace o sestavení
   [d] - spustí v režimu DOS (tabulka se skóre)

2) vylepšení modulu tui/hlavicka
   (možnost vypsání libovolného textu v dolních buňkách)

3) herní statistiky
   - nová položka v hlavním menu
   - upravená obrazovka s výsledkem hry
   - přepínač [s] vypíše herní statistiky

4) informace o době běhu programu po ukončení


+--------+------------+
| v0.0.2 | 2022-07-18 |
+--------+------------+


OPRAVENÉ CHYBY:

1) při vypnutí ansi_format v konfiguraci chyba kompilace
   (makro musí vracet prázdný řetězec "")

2) po vstupu do nápovědy se opětovně nezaplo zobrazení
   kurzoru v případě chyby otevření souboru s nápovědou

3) opraven znak UKAZATELPISMEN_NIC v modulu ukazatel_pismen
   (původní '0' umožňoval hádat nulu jako dostupný znak)

4) při zadání chybné volby v hlavním menu se zobrazí hláška


NOVINKY:

1) vylepšení kompatibility se systémy typu DOS (viz poznamky-dos.txt)
   - vypnutí formátování konzolového výstupu pod DOSem
   - úprava rozhraní pro rozlišení 25x80 znaků:
     a) vykreslování herního skóre do tabulky a zobrazení oběšence na
        samostatné obrazovce
     b) úprava rozložení nápovědy na 4 obrazovky a drobné změny v textu
        (vč. opravy vkládání nadbytečného prázdného řádku za zarážky '#'
        umístěné v souboru napoveda.dat)

2) vylepšená grafická podoba hlavičky a dalších obrázků typu ASCII-art

3) přidání zvláštních voleb do probíhající hry (vyhrazených znaků)
   [*] - zobrazí seznam dostupných voleb