@@ -2,7 +2,7 @@
  *  Zdrojový soubor hry Šibenice se vstupní funkcí main()
  *
  *  Zajišťuje:
- *  - vykreslení a obsluhu hlavního menu
+ *  - obsluhu hlavního menu
  *  - zpracování argumentů příkazové řádky
  *  - akce vykonávané před ukončením programu
  *    (uvolnění dynamické paměti, uložení dat atd.)
@@ -14,6 +14,11 @@
 #include <stdlib.h>
 #include <string.h>
 #include <time.h>
+#ifdef _MSC_VER
+  #include <direct.h>
+#else
+  #include <unistd.h>
+#endif
 #include "./globconf.h"
 #include "./libs/ansi_fmt.h"
 #include "./menu/men_glob.h"
@@ -44,6 +49,9 @@ struct tm *p_tmcas = NULL;
 /* zpracuje argumenty předané
    z příkazové řádky */
 void zpracuj_argumenty(int argc, char *argv[]);
+/* přepne do adresáře se spustitelným souborem
+   kvůli korekci relativních cest */
+void prepni_adresar(int argc, char *argv[]);
 
 
 /* vstupní bod aplikace */
@@ -53,6 +61,9 @@ int main(int argc, char *argv[])
   /* čas začátku běhu programu */
   time_t cas_spusteni = time(NULL);
   VOLBY_MENU volba_menu = MENU_MENU;
+
+  /* přepnutí do složky s programem */
+  prepni_adresar(argc, argv);
 
   /* zpracování argumentů CLI */
   zpracuj_argumenty(argc, argv);
@@ -184,4 +195,33 @@ void zpracuj_argumenty(int argc, char *argv[])
     fputs(ERR_SIGN ERR_ARGUMENTY "\n", stderr);
     exit(1);
   }
+}
+
+
+void prepni_adresar(int argc, char *argv[])
+{
+  char lomitko[2]  = "";    /* podoba lomítka v závislosti na OS */
+  char cesta[1000] = "";    /* buffer pro uložení path */
+  char *p_char     = NULL;  /* pomocný ukazatel */
+
+  #ifdef __DJGPP__
+    lomitko[0] = '/';
+  #elif defined(OS_DOS) || defined(OS_WIN)
+    lomitko[0] = '\\';
+  #else
+    lomitko[0] = '/';
+  #endif
+
+  (void) getcwd(cesta, sizeof(cesta));
+
+  #if !defined(OS_WIN) && !defined(OS_DOS)
+    strcat(cesta, lomitko);
+    strcat(cesta, (argc > 0) ? argv[0] : "");
+  #else
+    strcpy(cesta, (argc > 0) ? argv[0] : "");
+  #endif
+
+  p_char = strrchr(cesta, lomitko[0]);
+  if (p_char != NULL)  *p_char = '\0';
+  chdir(cesta);
 }
